log
Thu 16 May 2024 03:28:17 PM UTC: 
 tests:  0|5
total_score: 0/70
d892124
Thu 16 May 2024 04:01:19 PM UTC: 
 sudoku.c | 24 ++++++++++++++++++------
 1 file changed, 18 insertions(+), 6 deletions(-)
test.c: In function ‘test_isfinal’:
test.c:180:8: error: implicit declaration of function ‘is_final’ [-Werror=implicit-function-declaration]
  180 |     if(is_final(initial)){
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0a2a60f
Thu 16 May 2024 04:02:21 PM UTC: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
test.c: In function ‘test_isfinal’:
test.c:180:8: error: implicit declaration of function ‘is_final’ [-Werror=implicit-function-declaration]
  180 |     if(is_final(initial)){
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
96e59ce
Thu 16 May 2024 04:08:21 PM UTC: 
 sudoku.c | 17 +++++------------
 1 file changed, 5 insertions(+), 12 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:15: error: the address of ‘is_valid’ will always evaluate as ‘true’ [-Werror=address]
   55 |           if (is_valid)
      |               ^~~~~~~~
test.c: In function ‘test_isfinal’:
test.c:180:8: error: implicit declaration of function ‘is_final’ [-Werror=implicit-function-declaration]
  180 |     if(is_final(initial)){
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2937081
Thu 16 May 2024 04:09:55 PM UTC: 
 sudoku.c | 56 +++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 51 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c:111:3: error: expected identifier or ‘(’ before ‘return’
  111 |   return adj_nodes;
      |   ^~~~~~
sudoku.c:112:1: error: expected identifier or ‘(’ before ‘}’ token
  112 | }
      | ^
test.c: In function ‘test_isfinal’:
test.c:180:8: error: implicit declaration of function ‘is_final’ [-Werror=implicit-function-declaration]
  180 |     if(is_final(initial)){
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
92bb1d7
Thu 16 May 2024 04:10:09 PM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
test.c: In function ‘test_isfinal’:
test.c:180:8: error: implicit declaration of function ‘is_final’ [-Werror=implicit-function-declaration]
  180 |     if(is_final(initial)){
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c02972e
Thu 16 May 2024 04:11:45 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
test.c: In function ‘test_isfinal’:
test.c:180:8: error: implicit declaration of function ‘is_final’ [-Werror=implicit-function-declaration]
  180 |     if(is_final(initial)){
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3b0bb7f
Thu 16 May 2024 04:12:45 PM UTC: 
 sudoku.c | 60 ++++++++++++++----------------------------------------------
 1 file changed, 14 insertions(+), 46 deletions(-)
test.c: In function ‘test_isfinal’:
test.c:180:8: error: implicit declaration of function ‘is_final’ [-Werror=implicit-function-declaration]
  180 |     if(is_final(initial)){
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
02287b9
Thu 16 May 2024 04:13:29 PM UTC: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++----
 1 file changed, 36 insertions(+), 4 deletions(-)
 tests:  10|0
total_score: 70/70
7b6f2b4
Thu 16 May 2024 04:14:07 PM UTC: 
 sudoku.c | 17 -----------------
 1 file changed, 17 deletions(-)
 tests:  7|1
total_score: 55/70
d44ce91
Thu 16 May 2024 04:14:17 PM UTC: 
 sudoku.c | 8 --------
 1 file changed, 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ad8692a
Thu 16 May 2024 04:14:26 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:86:11: error: expected ‘;’ before ‘}’ token
   86 |   return 1
      |           ^
      |           ;
   87 | }
      | ~          
Compilation failed
e6c6103
Thu 16 May 2024 04:14:31 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
9a54ed9
